--- a/report/references.bib
+++ b/report/references.bib
@@ -1,19 +1,42 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@online{conda2024,
+  author  = {{Anaconda, Inc.}},
+  title   = {{Conda}},
+  url     = {https://anaconda.org/anaconda/conda},
+  urldate = {2024-12-07},
 }
 
+@online{githubactions2024,
+  author  = {{GitHub}},
+  title   = {{GitHub Actions}},
+  url     = {https://docs.github.com/en/actions},
+  urldate = {2024-12-07},
+}
 
+@online{githubpages2024,
+  author  = {{GitHub}},
+  title   = {{GitHub Pages}},
+  url     = {https://docs.github.com/en/pages},
+  urldate = {2024-12-07},
+}
+
+@online{ives2024,
+  author  = {{James Ives}},
+  title   = {{GitHub Pages Deploy Action}},
+  url     = {https://github.com/JamesIves/github-pages-deploy-action},
+  urldate = {2024-12-07},
+} 
+
+
+@online{pygame2024,
+  author  = {{Pygame}},
+  title   = {{Pygame}},
+  url     = {https://www.pygame.org/wiki/GettingStarted},
+  urldate = {2024-12-07},
+}
+
+@online{pygbag2024,
+  author  = {{Pygame}},
+  title   = {{Pygbag}},
+  url     = {https://pygame-web.github.io/wiki/pygbag},
+  urldate = {2024-12-07},
+}
