Update report, resources

--- a/report/references.bib
+++ b/report/references.bib
@@ -40,3 +40,10 @@
   url     = {https://pygame-web.github.io/wiki/pygbag},
   urldate = {2024-12-07},
 }
+
+@online{python2024,
+  author  = {{Python}},
+  title   = {{Python}},
+  url     = {https://www.python.org/downloads/release/python-3119/},
+  urldate = {2024-12-12},
+}
