--- a/report/index.qmd
+++ b/report/index.qmd
@@ -58,7 +58,7 @@ This layered architecture separates concerns, allowing modular adjustments to th
 
 ## Agents
 
-Two types of agents drive the simulation:
+Two types of agents run the simulation:
 
 ### User Agents
 
@@ -70,13 +70,12 @@ Vehicles start in the `Available` state, ready to be picked up. Once a user has 
 
 ## Environment {#sec-environment}
 
-The environment has many configurable parameters, including
+The environment has many configurable parameters, including:
 
 - **Grid Size:** The size of the grid in cells.
 - **Total Vehicles:** The number of vehicles in the simulation.
-- **Battery Depletion Rate:** The rate at which the battery depletes per time step.
+- **Battery Depletion Rate:** The rate at which the battery is depleted per time step.
 - **Recharge Time:** The time it takes for a vehicle to recharge.
-- **Max Users:** The maximum number of users that can appear in the environment at the same time.
 - **User Probability:** The probability of a user spawning.
 - **FPS:** The frames per second for the simulation.
 - **High-Demand Zone:** A boolean flag to indicate the presence of high-demand zones.
@@ -89,16 +88,16 @@ It provides the basis for agent interactions and the emergence of system-level b
 In general, the entire simulation is kept simple to focus on the interactions between agents and the emergent behaviors that result from these interactions. The simulation loop consists of the following steps:
 
 1. **User Spawning:** Based on the defined probability parameters, new users may appear at random cells. If a high-demand zone is active, user appearance rates are amplified there. Each user receives a random start and goal location.
-2. **Vehicle Assignment:** Users attempt to locate an available vehicle within a close distance. If successful, the user rents the vehicle.
+2. **Vehicle Assignment:** Users attempt to rent an available vehicle within a close distance. If successful, the user will use the vehicle to move towards its goal.
 3. **Agent Updates:** Users move towards their goals, no matter if they have a vehicle or not. Vehicles in use move alongside their users, depleting their battery. Depleted vehicles remain stationary and recharge.
 4. **State Transitions:** On reaching their destination, users release vehicles. If a battery is depleted, it needs recharging. After the recharge period, vehicles become available again.
-5. **Overlapping Agents:** Multiple agents can temporarily occupy the same cell and overlap without collision. This simplification avoids complex pathfinding and collision detection.
 
 Simplified simulation elements include:
 
 - **No Real-Time Movement:** All users move one cell per time step, whether they have a vehicle or not.
 - **(De)Spawning:** Users appear and disappear instantly, without animations or leaving the grid.
 - **No User Preferences:** Users do not have preferences for specific vehicles or locations, they only rent when a vehicle is nearby during their trip.
+- **Overlapping Agents:** Multiple agents can temporarily occupy the same cell and overlap without collision. This simplification avoids complex pathfinding and collision detection.
 
 ## Metrics
 
@@ -108,23 +107,23 @@ Key metrics are tracked at every frame to track system performance:
 - **User Wait Times:** The average time users wait before successfully renting a vehicle.
 - **Vehicle Utilization:** The percentage of the non-depleted fleet that is currently being rented, indicating how effectively the resource is being utilized.
 
-Tracking these metrics provides quantitative insights into how well the system performs under varying conditions (e.g., high-demand, low vehicle availability).
+Tracking these metrics provides quantitative insight into how well the system performs under varying conditions (e.g., high-demand, low vehicle availability).
 
 # Implementation
 
-Conda [@conda2024] is used to manage the Python environment and dependencies, based on version 3.11.9.
+Conda [@conda2024] is used to manage the Python environment (v. 3.11.9) [@python2024] and dependencies.
 
 ## Code Structure
 
-The implementation is organized into separate Python modules to maintain clarity and modularity:
+The implementation is organized into separate Python modules for clarity and modularity:
 
 - **colors.py:** Defines basic color constants for rendering.
 - **main.py:** Handles the User Interface (UI) for configuring the simulation parameters before starting.
-- **simulation.py:** Contains the logic for the MAS environment, agent classes (vehicles and users), state transitions and metric calculations. Logs metrics at each frame.
+- **simulation.py:** Contains the logic for the MAS environment, agent classes (`Vehicle` and `User`), state transitions and metric calculations. Logs metrics at each frame.
 
 ## UI
 
-A UI built with Pygame [@pygame2024] provides an interactive menu to configure the parameters described in @sec-environment. Additionally, the resolution of the simulation can be set and the simulation can be started and stopped from the UI. Once started, key metrics are displayed and the simulation runs indefinitely until stopped. Once stopped, the simulation can be reconfigured and restarted.
+An UI built with Pygame [@pygame2024] provides an interactive menu to configure the parameters described in @sec-environment. Additionally, the resolution of the simulation can be set and the simulation can be started and stopped from the UI. Once started, key metrics are displayed and the simulation runs indefinitely until stopped. Once stopped, the simulation can be reconfigured and restarted.
 
 
 ![Menu](resources/menu.png){#fig-menu}
@@ -134,7 +133,8 @@ A UI built with Pygame [@pygame2024] provides an interactive menu to configure t
 
 ![Simulation](resources/simulation.png){#fig-simulation}
 
-The @fig-simulation shows the simulation in action. Users are represented by black circles, vehicles by green (available), blue (in use), red squares (depleted) and the high-demand zone by the big grey circle.
+The @fig-simulation shows the simulation in action. Users are represented by black circles, vehicles by green (available), blue (in use), red (depleted) squares and the high-demand zone by the big gray circle. The black lines represent the path riding users will take to reach their goal.
+
 ## How to Run
 
 To run the simulation, first clone the repository and navigate to the project directory. Then create a new Conda environment and install the required dependencies:
@@ -152,7 +152,7 @@ To run the simulation, execute the following command:
 python main.py
 ```
 
-The simulation metrics are stored as CSV files in the `metrics/` directory per run and named with a timestamp. See `2024-12-07_02-12-58.csv` as an example:
+The simulation metrics are stored as CSV files in the `metrics/` directory for each run and are named with a timestamp. See `2024-12-07_02-12-58.csv` for an example:
 
 ```csv
 frame,users,vehicles,average_user_wait_time,vehicle_availability,vehicles_depleted,vehicle_utilization
@@ -173,7 +173,7 @@ frame,users,vehicles,average_user_wait_time,vehicle_availability,vehicles_deplet
 
 In addition to running the simulation locally, Pygbag [@pygbag2024] is used to package and deploy the simulation as a web application on GitHub Pages [@githubpages2024]. Using GitHub Actions [@githubactions2024], the simulation is automatically built and deployed to the `gh-pages` branch whenever changes are pushed to the `main` branch.
 
-A snippet of the GitHub Actions workflow file:
+A snippet of the GitHub Actions workflow file (`action.yml`) is shown below:
 
 ```yaml
 - name: Python
@@ -193,7 +193,7 @@ Using the `github-pages-deploy-action` [@ives2024], the built web application is
 
 # Results
 
-The simulation results provide insight into the performance of shared micromobility systems under different scenarios. The following figures illustrate the average user wait time, vehicle availability, and vehicle utilization over time for four different vehicle initialization strategies: random, center, uniform, and high-demand. Each strategy was run three times and the results were aggregated to provide a more robust analysis. All other parameters were held constant across runs, as shown in @tbl-parameters:
+The simulation results provide insight into the performance of shared micromobility systems under different scenarios. The following figures illustrate the average user wait time, vehicle availability and vehicle utilization over time for four different vehicle initialization strategies: random, center, uniform and high-demand. Each strategy was run three times and the results were aggregated to provide a more robust analysis. All other parameters were held constant across runs, as shown in @tbl-parameters:
 
 | Parameter               | Value                                 |
 |-------------------------|---------------------------------------|
@@ -279,8 +279,8 @@ ggplot(df_aggregated, aes(x = second, y = average_user_wait_time, color = approa
 
 @fig-average-user-wait-time shows the average user wait time over the course of the simulation. A lower wait time indicates better accessibility of vehicles for users:
 
-- **Center:** The center initialization strategy shows the highest average user wait time because vehicles are initially concentrated in the center and users must travel farther to reach them, especially when the high-demand zone is active and far from the center.
-- **High-Demand:** The high-demand initialization strategy has the lowest average user wait time because vehicles are concentrated in the High Demand zone, reducing the distance users must travel to find a vehicle.
+- **Center:** The center initialization strategy shows the highest average user wait time because vehicles are initially concentrated in the center and users must travel farther to reach them, especially when the high-demand zone is far from the center.
+- **High-Demand:** The high-demand initialization strategy has the lowest average user wait time because vehicles are concentrated in the high-demand zone, reducing the distance users must travel to find a vehicle.
 - **Random and Uniform:** The random and uniform initialization strategies show intermediate average user wait times, reflecting the more even distribution of vehicle availability across the network.
 
 ```{r}
@@ -299,7 +299,7 @@ ggplot(df_aggregated, aes(x = second, y = vehicle_availability, color = approach
 @fig-vehicle-availability shows the percentage of vehicles available for immediate use over time. Higher availability indicates better access to vehicles for users:
 
 - **Center:** Although the center initialization strategy has the highest average user wait time, it maintains the highest vehicle availability due to the initial concentration of vehicles in the center.
-- **High-Demand:** The high-demand initialization strategy has the lowest vehicle availability because the vehicles are concentrated in the high-demand zone and are used immediately by users, reducing the overall availability. However, the availability never drops below 50%, so there is no need to increase the number of vehicles.
+- **High-Demand:** The high-demand initialization strategy has the lowest vehicle availability because the vehicles are concentrated in the high-demand zone and are immediately used by users, reducing the overall availability. However, the availability never drops below 50%, so there is no need to increase the number of vehicles.
 - **Random and Uniform:** The random and uniform initialization strategies show intermediate vehicle availability, reflecting the more evenly distributed vehicle availability throughout the network.
 
 ```{r}
@@ -318,7 +318,7 @@ ggplot(df_aggregated, aes(x = second, y = vehicle_utilization, color = approach)
 @fig-vehicle-utilization shows the percentage of vehicles in use over time, representing the operational efficiency of the system. Higher utilization indicates more efficient use of the fleet:
 
 - **Center:** The center initialization strategy shows the lowest vehicle utilization after initialization.
-- **High-Demand:** The high-demand initialization strategy shows the highest vehicle utilization as users find the vehicles directly in the high-demand zone.
+- **High-Demand:** The high-demand initialization strategy shows the highest vehicle utilization as users find vehicles right in the high-demand zone.
 - **Random and Uniform:** The random and uniform initialization strategies again show intermediate vehicle utilization.
 
 # Conclusion
@@ -329,7 +329,7 @@ In summary, this project demonstrates the potential of MAS simulations for study
 
 # Acknowledgements
 
-The authors learned the basic concepts of MAS and the use of Pygame for simulations in the course "Multi-Agent Systems" at UGE. The authors would like to thank the course instructor for her guidance and support throughout the project.
+The authors learned the basic concepts of MAS and the use of Pygame for simulations in the course "Multi-Agent Systems" at UGE. They would like to thank the course instructor for her guidance and support throughout the project.
 
 # References
 
